@@ -122,12 +122,19 @@ bool Analyzer::Detect(File* in, U64 n, int it) {
                 if (p) {
                     for (size_t j=0; j<parsers.size(); j++) {
                         if (parsers[j]->priority>=i && parsers[j]->state!=DISABLE && parsers[j]->state!=END&& parsers[j]->state!=INFO) {
-                            //if (parsers[j]->state!=NONE) printf("T=%d parser %s DISABLED\n",j,parsers[j]->name.c_str());
+                            //if (parsers[j]->priority!=(MAX_PRI-1)) printf("T=%d parser %s DISABLED\n",j,parsers[j]->name.c_str());
                             dType t=parsers[j]->getType(0);
-                            if (t.type!=DEFAULT || parsers[j]->priority!=(MAX_PRI-1))parsers[j]->state=DISABLE; // ignore default type or lowest priority
+                            if (/*t.type!=DEFAULT ||*/ parsers[j]->priority!=(MAX_PRI-1))parsers[j]->state=DISABLE; // ignore default type or lowest priority
                             //printf("T=%d parser %s DISABLED\n",j,parsers[j]->name.c_str());
                         }
                     }
+                    /*if (pri[0]) { // Show 0 priority parsers
+                        for (size_t j=0; j<parsers.size(); j++) {
+                            if (parsers[j]->state!=DISABLE) {
+                                printf("T=%d parser %s ENABLED\n",j,parsers[j]->name.c_str());
+                            }
+                        }
+                    }*/
                     break;
                 }
             }
